README.md - add VM options for JavaFX in JDK 11